# pivot-experiment

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/web/: package.json
docs/: README.md  benchmark-report.md  data-generator.md  data-model.md  getting-started.md  large-scale-data-generation.md  roadmap.md
scripts/: benchmark.py  benchmark.sh  benchmark_10m.py
services/api/: Cargo.toml
services/api/src/: config.rs  error.rs  lib.rs  main.rs
services/api/src/cache/: mod.rs  redis.rs
services/api/src/db/: clickhouse.rs  mod.rs  models.rs
services/api/src/handlers/: constituents.rs  exposure.rs  health.rs  instruments.rs  mod.rs  pivot.rs  pnl.rs
services/api/src/middleware/: logging.rs  mod.rs
services/api/src/models/: request.rs  response.rs
services/api/src/query/: builder.rs  dimensions.rs  metrics.rs  mod.rs
sql/clickhouse/: 001_schema.sql  002_rollups.sql
tools/data-gen/: Cargo.toml
tools/data-gen/src/: main.rs
