[package]
name = "pivot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# ClickHouse client
clickhouse = { version = "0.12", features = ["lz4"] }

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
sha2 = "0.10"

[dev-dependencies]
actix-rt = "2.9"
